--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "godot_tools.editor_path": "/Users/benjude/Godot Projects/ReasoningEngine/project.godot"
+  "godot_tools.editor_path": "/Users/benjude/Godot Projects/ReasoningEngine/project.godot",
+  "godotTools.editorPath.godot4": "/Applications/Godot_mono.app/Contents/MacOS/Godot"
 }
