--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -6,9 +6,9 @@ runnable=true
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="*.txt"
 exclude_filter=""
-export_path="C:/Users/Ben/Desktop/Curator/Curator.exe"
+export_path="C:/Users/Ben/Desktop/Curator-v3/Curator.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -32,13 +32,13 @@ codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PackedStringArray()
 application/modify_resources=true
-application/icon=""
-application/console_wrapper_icon=""
+application/icon="res://Curator.png"
+application/console_wrapper_icon="res://Curator.png"
 application/icon_interpolation=4
 application/file_version=""
 application/product_version=""
-application/company_name=""
-application/product_name=""
+application/company_name="Group Graduating"
+application/product_name="Curator"
 application/file_description=""
 application/copyright=""
 application/trademarks=""
