Add FuzzySharp library for fuzzy string matching in TargetResolution.cs

--- a/G4fps.csproj
+++ b/G4fps.csproj
@@ -4,6 +4,7 @@
     <EnableDynamicLoading>true</EnableDynamicLoading>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="FuzzySharp" Version="2.0.2" />
     <PackageReference Include="System.Speech" Version="7.0.0" />
   </ItemGroup>
 </Project>
